--- a/public/index.html
+++ b/public/index.html
@@ -16,42 +16,46 @@
   <header>Blog Header</header>
   <div id="content">
     <div id="login">
-      <fieldset>
-	<legend>Login</legend>
-	<ul>
-	  <li>
-	    <label>User</label>
-	    <input type="text" id="user" name="user" />
-	  </li>
-	  <li>
-	    <label>Pass</label>
-	    <input type="password" id="pass" name="pass" />
-	  </li>
-	  <li>
-	    <input type="submit" id="authSubmit" value="submit">
-	  </li>
-	</ul>
+      <form id="loginForm">
+	<fieldset>
+	  <legend>Login</legend>
+	  <ul>
+	    <li>
+	      <label>User</label>
+	      <input type="text" id="user" name="user" />
+	    </li>
+	    <li>
+	      <label>Pass</label>
+	      <input type="password" id="pass" name="pass" />
+	    </li>
+	    <li>
+	      <input type="submit" id="authSubmit" value="submit">
+	    </li>
+	  </ul>
+      </form>
     </div>
     </fieldset>
   </div>
   
   <div id="newPost" style="display:none;">
-    <fieldset>
-      <legend>Add Post</legend>
-      <ul>
-	<li>
-	  <label>Title</label>
-	  <input type="text" id="title" name="title" />
-	</li>
-	<li>
-	  <label>Story</label>
-	  <textarea id="story" name="story" cols=80 rows=10></textarea>
-	</li>
-	<li>
-	  <input type="submit" id="postSubmit" value="Submit" />
-	</li>
-      </ul>
-    </fieldset>
+    <form id="newPostForm">
+      <fieldset>
+	<legend>Add Post</legend>
+	<ul>
+	  <li>
+	    <label>Title</label>
+	    <input type="text" id="title" name="title" />
+	  </li>
+	  <li>
+	    <label>Story</label>
+	    <textarea id="story" name="story" cols=80 rows=10></textarea>
+	  </li>
+	  <li>
+	    <input type="submit" id="postSubmit" value="Submit" />
+	  </li>
+	</ul>
+      </fieldset>
+      <form>
   </div>
   
   <div id="blog">      
