editable posts, that's all

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
   <title>Blog Title</title>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
   <script src="socket.io/socket.io.js"></script> 
-<!--  <script src="socket.io/socket.io-sessions.js"></script> -->
 
   <script src="js/jwysiwyg/jquery.wysiwyg.js"></script>
+  <script src="js/jquery.jeditable.js"></script>
+  <script src="js/jquery.jeditable.jwysiwyg.js"></script>
 
   <script src="js/blogClient.js"></script>
 
